--- a/plan.org
+++ b/plan.org
@@ -1,15 +1,17 @@
 * Kubernetes Plan
 
-- Get verify-frontend / stub-api running
-- Deploy to GKE
-- Get verify-service-provider running (work out how to deploy app config / fed config - config maps?)
-- Deploy to GKE
-- Get passport-verify-stub-relying-party running
-- Deploy to GKE
-- Get verify-matching-service-adapter running
-- Get verify-local-matching-service-example running
-- Deploy to GKE
-- Get saml-proxy running
-- Get other saml services running
-- Deploy to GKE
+** DONE Get verify-frontend / stub-api running
+CLOSED: [2017-12-25 Mon 08:51]
+
+** TODO Deploy to GKE
+** TODO Get verify-service-provider running (work out how to deploy app config / fed config - config maps?)
+** TODO Deploy to GKE
+** TODO Get passport-verify-stub-relying-party running
+** TODO Deploy to GKE
+** TODO Get verify-matching-service-adapter running
+** TODO Get verify-local-matching-service-example running
+** TODO Deploy to GKE
+** TODO Get saml-proxy running
+** TODO Get other saml services running
+** TODO Deploy to GKE
   
